[gd_scene load_steps=7 format=2]

[ext_resource path="res://imported_scenes/bullet.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.346154, 0.881988, 1 )
colors = PoolColorArray( 0.992383, 0.203322, 0.203322, 1, 1, 0.662505, 0.0837889, 1, 0.98457, 0.976718, 0.517092, 1, 0.996078, 0.996078, 0.894118, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 1 )
width = 128

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.189773 ), 0.0, 0.0, 0, 0, Vector2( 0.184783, 0.989773 ), 0.0, 0.0, 0, 0, Vector2( 0.619565, 0.998864 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.25343, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 156.43
gravity = Vector3( 0, -30, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 6 )

[node name="Bullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
amount = 300
lifetime = 0.2
local_coords = false
process_material = SubResource( 5 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
antialiased = true
polygon = PoolVector2Array( -8, -8, 16, -8, 22, -6, 24, 0, 22, 6, 16, 8, -16, 8, -16, -8 )

[node name="Polygon2D2" type="Polygon2D" parent="Polygon2D"]
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
antialiased = true
polygon = PoolVector2Array( -8, -8, 16, -8, 16, 8, -16, 8, -16, -8 )

[node name="CollisionDetection" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionDetection"]
polygon = PoolVector2Array( -16, -8, 16, -8, 22, -6, 24, 0, 22, 6, 16, 8, -16, 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="DestructionPolygon" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0, -72, 57, -63, 72, 0, 64, 56, 0, 72, -51, 49, -64, 0, -56, -56 )

[connection signal="body_entered" from="CollisionDetection" to="." method="_on_CollisionDetection_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
